Revert "background height jump fix on mobile"
This reverts commit 34f1d1fb943ec51f1182f79a0d36ba801451b812.

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,7 +270,6 @@ nav a:focus {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-blend-mode: multiply;
-    transition: height 1s ease;
     /* box-shadow: 0px 0px 8px var(--clr-primary); */
 }
 
